2006-06-18  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/GameScreen.cs: use the new MapRenderer code.

	* SCSharp/SCSharp.UI/MapRenderer.cs: move this to code that
	renders the map a piece at a time (and composites the tiles onto a
	surface that's the size of the paintable screen instead of the
	size of the map).  Right now it just uses a Dictionary for a
	cache, so eventually (by scrolling all over the map) the memory
	usage ends up being just as bad (worse, probably) than it was
	before.  This should be fixed to use a LRU scheme, probably.

2006-06-18  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/GameScreen.cs: lots of changes.  make almost
	everything work with the Painter's Invalidate/Dirty stuff.  Also,
	add the portrait for the currently selected unit.

	* SCSharp/SCSharp.UI/Game.cs: for the ctrl-key handling return
	after handling it, so it doesn't also hit the UIScreen's keyboard
	handler.

	* SCSharp/SCSharp.UI/Sprite.cs: do the proper thing wrt
	Invalidate/Dirty.

	* SCSharp/SCSharp.UI/Painter.cs: get rid of backsurface.  since
	we're double buffered anyway there's no need for the extra blit
	and additional 640x480x4 bytes.  Also, remove the
	pending{Add,Clear,Remove} stuff.  this shouldn't be a problem
	anymore, as we're iterating using a for loop instead of anything
	requiring an enumerator.  Lastly, change the way fps is calculated
	- we were skipping frames that didnt require drawing in the case
	where we weren't showing fps.  Also, dispose of the previous
	fps_surface before creating a new one.

	* SCSharp/SCSharp.UI/MovieElement.cs: add a ctor for the
	non-BinElement case.

	* SCSharp/SCSharp.UI/ImageElement.cs: same.

	* SCSharp/SCSharp.UI/UIElement.cs: add a ctor that doesn't take a
	BinElement, useful for creating UIElements which don't correspond
	to something in a .bin file.

	* SCSharp/SCSharp.UI/Unit.cs: add Portrait property.

	* SCSharp/SCSharp.UI/UIScreen.cs: remove some spew about the